--- a/04-01.ipynb
+++ b/04-01.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kjkandrea/python-programming-basic/blob/main/04_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kjkandrea/python-programming-basic/blob/main/04-01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -157,14 +157,227 @@
     {
       "cell_type": "code",
       "source": [
-        "print(1 / 3 * 3.14 * 20 ** 2 * 30 )\n",
-        "print(3.14 * 20 ** 2 + 3.14 * 20 * 30)"
+        "#반지름, 높이 값 할당\n",
+        "radius = 20\n",
+        "height = 30\n",
+        "\n",
+        "#부피 출력\n",
+        "print( 1 / 3 * 3.14 * radius ** 2 * height )\n",
+        "#겉넒이 출력\n",
+        "print( 3.14 * radius ** 2 + 3.14 * radius * height )"
       ],
       "metadata": {
-        "id": "buMmaXCXjk6D"
+        "id": "buMmaXCXjk6D",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a3ed8871-f32d-4fe8-971d-d779d8ae3ac9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12559.999999999998\n",
+            "3140.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4강 3절"
+      ],
+      "metadata": {
+        "id": "aHBNBVrBwt3Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 / 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FTV2iJ5wwyPq",
+        "outputId": "715567ba-e169-4fc0-fbae-c760085fd4c7"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 // 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0O_ge9sfwziX",
+        "outputId": "08cbeb5c-2128-4fe1-a23d-87e98bce2f36"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 % 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eZIFQyFRw0Ux",
+        "outputId": "8185a2de-ac02-4dea-e690-b195f3c9f857"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "0.5 % 0.2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9xVBCke8w5kC",
+        "outputId": "02ea64ce-9f25-4d3a-de09-f56f018a32fc"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.09999999999999998"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = 9\n",
+        "\n",
+        "# 홀수: 1, 짝수: 0\n",
+        "number % 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o4Ne0gk0xCf7",
+        "outputId": "81b9ccb7-b706-4cc3-b5ef-595e02721709"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "max(2, 3, 4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ifDJIgXTxMdc",
+        "outputId": "28b4c4fd-bb20-425b-f6f9-b978545aa07a"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "min(2, 3, 4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OVTMmGzqxe4n",
+        "outputId": "68db460e-3945-4b85-86da-79225e2e9a37"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     }
   ]
 }
