--- a/12-01_file.md
+++ b/12-01_file.md
@@ -13,7 +13,7 @@
 
 연속된 바이트와 파일의 시작, 파일 포인터, 파일의 끝(EoF)으로 표현
 
-## `open()`
+### `open()`
 
 물리적인 파일과 연결된 파일 객체를 생성하고 참조 변수에 할당
 
@@ -21,18 +21,35 @@
 * `w` : Write. 쓰기
 * `a` : Append. 추가
 
-## `file.read()`
+### `file.read()`
 
 읽을 byte 수를 인수로 전달한 후 문자를 반환
 
-## `file.readline()`
+### `file.readline()`
 
 한 라인의 문자열을 반환
 
-## `file.write()`
+### `file.write()`
 
 파일에 문자열을 작성 
 
-## `file.close()`
+### `file.close()`
 
 파일 닫기 및 파일 객체 삭제
+
+## 파일의 환용
+
+### 시퀀스의 개념
+
+순서화된 값의 집합체를 저장할 수 있는 데이터 타입
+* 리스트, 세트, 투플, 딕셔너리 등
+
+### 딕셔너리
+
+키와 값의 쌍을 저장하는 시퀀스
+
+#### 딕셔너리 순회
+
+순회(traversal) : 각각의 항목을 순서대로 한번 씩만 방문하는 과정
+
+
